# StudyWallet

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup.sql
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/constants/: enums.py
backend/app/middleware/: auth_middleware.py  error_handler.py  logging_middleware.py  security.py
backend/app/models/: __init__.py  chapter.py  note.py  resource.py  subject.py  user.py
backend/app/routers/: analytics.py  auth.py  chapters.py  notes.py  pdfs.py  resources.py  search.py  subjects.py
backend/app/schemas/: analytics.py  auth.py  chapter.py  note.py  resource.py  search.py  subject.py
backend/app/services/: analytics_service.py  auth_service.py  chapter_service.py  note_service.py  pdf_service.py  resource_service.py  search_service.py  subject_service.py
backend/app/utils/: security.py  supabase.py
backend/scripts/: seed.py  setup_supabase.py
backend/tests/: conftest.py  test_auth.py  test_enums.py  test_subjects.py
frontend/: .env.example  .gitignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/constants/: enums.ts
frontend/src/hooks/: useAuth.ts  useChapters.ts  useNotes.ts  useResources.ts  useSubjects.ts
infra/nginx/: api.conf
(+38 files in other folders)
